--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immer": "^9.0.7",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.0",
+    "serialize-javascript": "^6.0.0",
     "styled-components": "^5.3.3"
   },
   "scripts": {
