--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "immer": "^9.0.7",
+    "node-forge": "^1.2.0",
     "node-sass": "^7.0.1",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.2",
